--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
 
-/*body {
+body {
     font-family: "Verdana", Arial, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
 }
-*/
+
 
 header {
 
