--- a/style.css
+++ b/style.css
@@ -2,19 +2,47 @@
 
 body {
     font-family: "Verdana", Arial, sans-serif;
-    background-color: #f5f5f5;
     margin: 0;
     padding: 0;
+    background-image: url("sources/Full-Hd-Black-Wallpapers-Group-Dark-Wallpaper-Hd\,-Hd-.jpg");
+    background-size: cover;
+    background-attachment: auto;
+    background-repeat: no-repeat;
+    
 }
-
-
-header {
-
-    background-color: #333;
+/*
+body {
+    background-image: url("sources/dark-zombie-wallpaper-preview.jpg");
+    background-repeat: no-repeat;
+    width:fit-content;
+}
+*/
+header  {
+    
+    background-color: #020202;
     color: #fff;
     text-align: center;
     padding: 20px 0; 
 } 
+.game {
+    
+    color:#fff;
+}
+
+.game-title {
+    text-align:center;
+}
+
+.game-info {
+    text-align: center;
+}
+
+.intro{
+    color: #fff;
+    text-align: center; 
+    padding-left: 20px; 
+}
+
 .header-content h1 {
     justify-content: center;
     color: red;
@@ -33,3 +61,71 @@ h1 {
     line-height: 1.5;
 }
 
+
+.fa-instagram {
+    
+    color: white;
+  }
+
+ .game-title {
+    font-size: 20px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+ }
+
+ .play-button {
+    font-size: 20px;
+    color: red;
+ }
+
+
+
+ 
+ @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap');
+ 
+ .btn, .btn-link{
+ font-family: "Raleway";
+ font-weight: 300;
+ font-size: 17px;
+ color: #ff0000;
+ background-color: #4f0000;
+ padding: 10px 30px;
+ border: solid #000000 2px;
+ box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+ border-radius: 34px;
+ transition : 1303ms;
+ transform: translateY(0);
+ display: inline-block;
+ flex-direction: row;
+ align-items: center;
+ cursor: pointer;
+ text-transform: uppercase;
+ 
+ }
+ 
+ .btn:hover{
+ transition : 1303ms;
+ padding: 10px 20px;
+ transform : translateY(-0px);
+ background-color: #bd1a1a;
+ color: #000000;
+ border: solid 2px #000000;
+ 
+ }
+ 
+.img {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.contenedor-de-imagen {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente (opcional) */
+    /*height: 100vh;  Ajusta la altura según tus necesidades */
+}
+
+.imagen {
+    max-width: 100%; /* Ajusta el ancho máximo de la imagen */
+    max-height: 100%; /* Ajusta la altura máxima de la imagen */
+}
