--- a/style.css
+++ b/style.css
@@ -79,9 +79,6 @@ h1 {
  }
 
 
-
- 
- /*@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Lato&family=Nunito&family=Playfair+Display:ital@1&family=Prata&family=Raleway:ital,wght@1,100&family=Roboto&family=Roboto+Condensed&family=Teko&display=swap');*/
  
  .btn, .btn-link{
  font-family: "Raleway";
@@ -112,20 +109,77 @@ h1 {
  border: solid 2px #000000;
  
  }
- 
-.img {
-    text-align: center;
-    margin: 0 auto;
-}
 
+ 
+ 
 .contenedor-de-imagen {
     display: flex;
     justify-content: center;
     align-items: center; 
- 
+  
+    text-align: center;
+    margin: 0 auto;
+}
+/*
+.contenedor-de-imagen {
+    height: 168px;
+    width: 300px;
+    overflow: hidden;
+    position: relative;
 }
 
-.imagen {
-    max-width: 100%;
-    max-height: 100%; 
+.contenedor-de-imagen .imagen {
+    width: 100%;
+    height: 100%; 
 }
+
+.imagen img{
+    width: 100%;
+    height: 100%; 
+}
+
+.btm-slide {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    display: flex;
+    transform: translateX(-50%);
+}
+
+.btm-slide span {
+    height: 15px;
+    width: 50px;
+    border: 2px solid white;
+    margin: 0 3px;
+    cursor: pointer;
+}
+
+.btm-slide span:hover {
+    background: white;
+}
+
+.contenedor-de-imagen .slide {
+    position:absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 45px;
+    border: 2px solid white;
+    background: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+
+}
+
+.contenedor-de-imagen .slide:hover {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.slide span{
+    font-size: 35px;
+    color: white;
+    line-height: 41px;
+}
+
+.contenedor-de-imagen .right {
+    right: 0;
+}
+*/
