--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ header  {
     text-align: center;
 }
 
+.game-description {
+    text-align: center;
+}
+
 .intro{
     color: #fff;
     text-align: center; 
@@ -120,66 +124,87 @@ h1 {
     text-align: center;
     margin: 0 auto;
 }
-/*
-.contenedor-de-imagen {
+
+.carousel {
+    max-width: 320px;
+    max-height: 188px;
+    margin: auto;
+    display: flex;
+}
+
+
+#imagen {
     height: 168px;
     width: 300px;
     overflow: hidden;
-    position: relative;
 }
 
-.contenedor-de-imagen .imagen {
-    width: 100%;
-    height: 100%; 
-}
-
-.imagen img{
-    width: 100%;
-    height: 100%; 
-}
-
-.btm-slide {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
+#retroceder{
+    font-family: Raleway;
+    font-weight: 200;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #000000;
+    padding: 9px 18px;
+    border: none;
+    box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+    border-radius: 20px 0px 0px 20px;
+    transition : 1360ms;
+    transform: translateY(0);
     display: flex;
-    transform: translateX(-50%);
-}
-
-.btm-slide span {
-    height: 15px;
-    width: 50px;
-    border: 2px solid white;
-    margin: 0 3px;
+    flex-direction: row;
+    align-items: center;
     cursor: pointer;
-}
+    text-transform: lowercase;
+    
+    }
+    
+    #retroceder:hover{
+        transition : 1360ms;
+    padding: 10px 20px;
+    transform : translateY(-0px);
+    background-color: #595959;
+    color: #ffffff;
+    border: solid 2px #ffffff;
+    
+    }
 
-.btm-slide span:hover {
-    background: white;
-}
+    #avanzar{
+        font-family: Raleway;
+        font-weight: 200;
+        font-size: 20px;
+        color: #ffffff;
+        background-color: #000000;
+        padding: 9px 18px;
+        border: none;
+        box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+        border-radius: 0px 20px 20px 0px;
+        transition : 1360ms;
+        transform: translateY(0);
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        cursor: pointer;
+        text-transform: lowercase;
+        
+        }
+        
+        #avanzar:hover{
+        transition : 1360ms;
+        padding: 10px 20px;
+        transform : translateY(-0px);
+        background-color: #595959;
+        color: #ffffff;
+        border: solid 2px #ffffff;
+        
+        }
 
-.contenedor-de-imagen .slide {
-    position:absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 45px;
-    border: 2px solid white;
-    background: rgba(255, 255, 255, 0.1);
-    cursor: pointer;
-
-}
-
-.contenedor-de-imagen .slide:hover {
-    background: rgba(255, 255, 255, 0.2);
-}
-
-.slide span{
-    font-size: 35px;
-    color: white;
-    line-height: 41px;
-}
-
-.contenedor-de-imagen .right {
-    right: 0;
-}
-*/
+        .imagenROTD {
+            display: flex;
+            justify-content: center;
+            align-items: center; 
+          
+            text-align: center;
+            margin: 0 auto;
+        }
+        
