--- a/style.css
+++ b/style.css
@@ -281,3 +281,8 @@ h1 {
         text-transform: uppercase;
         text-decoration: none;
     }
+
+    .gracias{
+        justify-content: center;
+    color: red;
+    }
