--- a/contacto/contacto.css
+++ b/contacto/contacto.css
@@ -27,7 +27,7 @@ label {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
-    color: #000000;
+    color: #ffffff;
 }
 
 
@@ -124,6 +124,6 @@ color: white;
  padding: 10px 20px;
  transform : translateY(-0px);
  background-color: #bd1a1a;
- color: #000000;
+ color: #ffffff;
  border: solid 2px #000000;
 }
