--- a/pag2/pag.css
+++ b/pag2/pag.css
@@ -15,6 +15,7 @@ header  {
     color: #fff;
     text-align: center;
     padding: 20px 0; 
+    
 } 
 
 .header-content h1 {
@@ -23,17 +24,20 @@ header  {
 }
 
 h1 {
+    color:white;
     font-size: 36px;
     margin-bottom: 10px;
     text-align: center;
 }
 .tls-1  {
+    color:white;
     font-size: 16px;
     margin-bottom: 10px;
     text-align: center;
     padding-left: 20px; 
 }
 .tls-2 {
+    color:white;
     font-size: 16px;
     margin-bottom: 10px;
     text-align: center;
@@ -41,6 +45,7 @@ h1 {
 }
 
 .tls-u  {
+    color:white;
     font-size: 16px;
     margin-bottom: 10px;
     text-align: center;
@@ -48,6 +53,7 @@ h1 {
 }
 
 .tls-dz {
+    color:white;
     font-size: 16px;
     margin-bottom: 10px;
     text-align: center;
@@ -55,6 +61,7 @@ h1 {
 }
 
 .tls-a {
+    color:white;
     font-size: 16px;
     margin-bottom: 10px;
     text-align: center;
