--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h1 {
  padding: 10px 20px;
  transform : translateY(-0px);
  background-color: #bd1a1a;
- color: #000000;
+ color: #f9f9f9;
  border: solid 2px #000000;
  
  }
@@ -219,7 +219,7 @@ h1 {
     font-family: "Raleway";
     font-weight: 300;
     font-size: 17px;
-    color: #000000;
+    color: #ffffff;
     background-color: #000000;
     margin-left: 44%;
     padding: 10px 30px;
@@ -241,7 +241,7 @@ h1 {
         padding: 10px 20px;
         transform : translateY(-0px);
         background-color: #350000;
-        color: #000000;
+        color: #ffffff;
         border: solid 2px #000000;
     }
 
@@ -249,7 +249,7 @@ h1 {
         font-family: "Raleway";
         font-weight: 300;
         font-size: 17px;
-        color: #000000;
+        color: #ffffff;
         background-color: #000000;
         padding: 10px 30px;
         border: solid #000000 2px;
@@ -267,7 +267,7 @@ h1 {
         font-family: "Raleway";
         font-weight: 300;
         font-size: 17px;
-        color: #000000;
+        color: #ffffff;
         background-color: #000000;
         padding: 10px 30px;
         border: solid #000000 2px;
